# bufhash

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: murmur3.rs  simple.rs
src/: lib.rs  partitioned.rs
src/partitioned/: hasher.rs
