[package]
name = "bufhash"
version = "0.1.0"
author = "Clay McLeod <clay.l.mcleod@gmail.com>"
description = "Buffered hashing facilities"
license = "MIT OR Apache-2.0"
edition = "2021"
documentation = "https://docs.rs/bufhash"
repository = "https://github.com/claymcleod/bufhash"
keywords = ["hash", "hasher", "hashing"]
categories = ["algorithms"]

[dependencies]
